
<package>
  <name>cmaes_catkin</name>
  <version>0.0.0</version>
  <description>Wrapper for CMAES Library.</description>
  <maintainer email="marija.popovic@mavt.ethz.ch">Marija Popovic</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
